--- a/html/readComic.html
+++ b/html/readComic.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="/css/output.css" rel="stylesheet">
   </head>
 
@@ -77,8 +75,8 @@
 
 			<!--Title-->
 			<div class="font-sans text-center">
-						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-200 pt-6 pb-2 text-3xl md:text-4xl">LMAO</h1>
-						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-100">12/03/23</p>
+						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-200 pt-6 pb-2 text-3xl md:text-4xl"></h1>
+						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-100"></p>
 			</div>
 			<div class="flex flex-row items-center justify-center gap-1 font-sans text-sm ">
 				<div>
@@ -127,7 +125,7 @@
 					  </svg>
 					</label>
 				  </div>
-				  <h1 id="likeCount" class="text-white">69</h1>
+				  <h1 id="likeCount" class="text-white"></h1>
 
 			</div>
 
@@ -169,9 +167,7 @@
 	</div>
 	<!--/container-->
      <!-- comic starts -->
-     <div class="grid w-screen grid-cols-1 gap-1">
-      <img src="https://scans-hot.leanbox.us/manga/One-Piece/1044-013.png" class="h-comic" alt="">
-      <img src="https://scans-hot.leanbox.us/manga/One-Piece/1044-010.png" class="h-comic mx-auto" alt="">
+     <div id="panelContainer" class="grid w-screen grid-cols-1 gap-1">
     </div>
    
     <div class="container w-full md:max-w-3xl mx-auto pt-20">
@@ -214,7 +210,7 @@
 			</div>
 			<div class="text-right">
 				<span class="text-xs md:text-sm font-bold text-gray-100">Next Chapter </span><br>
-				<p><a id="nextChap" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline">ss</a></p>
+				<p><a id="nextChap" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a></p>
 			</div>
 		</div>
 
@@ -288,7 +284,6 @@
 	</footer>
 
 	<script>
-		/* Progress bar */
 		var h = document.documentElement,
 			b = document.body,
 			st = 'scrollTop',
@@ -331,11 +326,9 @@
 	</script>
 
 	<script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
-	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script defer src="/js/init.js"></script>
-	<script defer src="/js/readNovel.js" type="module"></script>
+	<script defer src="/js/readComic.js" type="module"></script>
 
 </body>
 
