--- a/html/comic.html
+++ b/html/comic.html
@@ -187,7 +187,7 @@
                                         <div class=" bg-white border rounded shadow-sm ">
                                             <div class="relative">
                                                   <div class=" top-0 right-0 p-0 m-0 absolute">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  fill="currentColor" class="text-red-500  " viewBox="0 0 0.1 9">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  fill="currentColor" class="text-red-500 z-30  " viewBox="0 0 0.1 9">
                                                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
                                                   </svg>
                                             </div>
