--- a/html/home.html
+++ b/html/home.html
@@ -9,7 +9,7 @@
     <link href="/css/output.css" rel="stylesheet">
     <title>Welcome to Yume</title>
 </head>
-<body class=" " style="background-color: #121212;">
+<body class="bg-black" >
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.6.3/umd/react.production.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.6.3/umd/react-dom.production.min.js"></script>
@@ -133,7 +133,7 @@
     })
   })</script>
 </nav>
-    <div class="bg-transparent w-screen">
+    <div class="bg-transparent w-screen" style="background-color: #121212;">
         <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
           <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"> Recently published:</h2>
       
