--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="dark" :class="{ 'theme-dark': dark }" x-data="data()" lang="en">
+<html class="dark"  x-data="data()" lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -17,6 +17,25 @@
 </head>
 
 <body class="">
+  <!-- <td class="px-4 py-3 text-xs">
+    <span
+      class="px-2 py-1 font-semibold leading-tight text-orange-700 bg-orange-100 rounded-full dark:text-white dark:bg-orange-600">
+      Draft
+    </span>
+  </td>
+  <td class="px-4 py-3 text-xs">
+    <span
+      class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100">
+      Ongoing
+    </span>
+  </td>
+  <td class="px-4 py-3 text-xs">
+    <span
+      class="px-2 py-1 font-semibold leading-tight text-red-700 bg-red-100 rounded-full dark:text-red-100 dark:bg-red-700">
+      Paused
+    </span>
+  </td> -->
+  
   <div class="flex h-screen bg-gray-50 dark:bg-gray-900" :class="{ 'overflow-hidden': isSideMenuOpen }">
     <!-- Desktop sidebar -->
     <aside class="z-20 hidden w-64 overflow-y-auto bg-white dark:bg-gray-800 md:block flex-shrink-0">
@@ -662,25 +681,7 @@
       </main>
     </div>
   </div>
-  <td class="px-4 py-3 text-xs">
-    <span
-      class="px-2 py-1 font-semibold leading-tight text-orange-700 bg-orange-100 rounded-full dark:text-white dark:bg-orange-600">
-      Draft
-    </span>
-  </td>
-  <td class="px-4 py-3 text-xs">
-    <span
-      class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100">
-      Ongoing
-    </span>
-  </td>
-  <td class="px-4 py-3 text-xs">
-    <span
-      class="px-2 py-1 font-semibold leading-tight text-red-700 bg-red-100 rounded-full dark:text-red-100 dark:bg-red-700">
-      Paused
-    </span>
-  </td>
-  
+
 
   <div class="w-full h-full z-40  bg-gray-800 bg-opacity-90 top-0 overflow-y-auto overflow-x-hidden fixed sticky-0" id="chec-div">
     <div class="w-full absolute z-10 right-0 h-full overflow-x-hidden transform translate-x-0 transition ease-in-out duration-700" id="notification">
