--- a/html/readComic.html
+++ b/html/readComic.html
@@ -78,6 +78,7 @@
 			<div class="font-sans text-center">
 						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-200 pt-6 pb-2 text-3xl md:text-4xl"></h1>
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-100"></p>
+						<p id="chapReads" class="text-sm md:text-base font-normal text-gray-100"></p>
 			</div>
 			<div class="flex flex-row items-center justify-center gap-1 font-sans text-sm ">
 				<div>
@@ -157,7 +158,7 @@
 		<div class="flex w-full items-center font-sans px-4 py-2">
 			<img id="creatorPfp" class="w-10 h-10 rounded-full mr-4" src="http://i.pravatar.cc/300" alt="Avatar of Author">
 			<div class="flex-1 px-2">
-				<p id="creatorUsername" class="text-base font-bold md:text-xl leading-none mb-2"></p>
+				<p id="creatorUsername" class="text-base text-white font-bold md:text-xl leading-none mb-2"></p>
 				<p id="creatorDescription" class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
 			</div>
 			<div class="justify-end">
