--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -80,6 +80,7 @@
 				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a href="/" class="text-base md:text-sm text-cyan-700 font-bold no-underline hover:underline">BACK TO HOME</a></p>
 						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl"></h1>
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-600"></p>
+						<p id="chapReads" class="text-sm md:text-base font-normal text-gray-600"></p>
 			</div>
 			<div class="flex flex-row items-center justify-start gap-1 font-sans text-sm ">
 
@@ -163,7 +164,7 @@
 		<div class="flex w-full items-center font-sans px-4 py-2">
 			<img id="creatorPfp" class="w-10 h-10 rounded-full mr-4" src="http://i.pravatar.cc/300" alt="Avatar of Author">
 			<div class="flex-1 px-2">
-				<p id="creatorUsername" class="text-base font-bold md:text-xl leading-none mb-2"></p>
+				<p id="creatorUsername" class="text-base text-white font-bold md:text-xl leading-none mb-2"></p>
 				<p id="creatorDescription" class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
 			</div>
 			<div class="justify-end">
