--- a/html/readComic.html
+++ b/html/readComic.html
@@ -78,7 +78,14 @@
 			<div class="font-sans text-center">
 						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-200 pt-6 pb-2 text-3xl md:text-4xl"></h1>
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-100"></p>
-						<p id="chapReads" class="text-sm md:text-base font-normal text-gray-100"></p>
+						<div class="flex  text-white justify-center items-center mt-2 content-center flex-row">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 13">
+								<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+								<path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+							  </svg>
+							  <p id="chapReads" class="text-sm md:text-base font-normal text-gray-100"></p>
+
+						</div>
 			</div>
 			<div class="flex flex-row items-center justify-center gap-1 font-sans text-sm ">
 				<div>
