--- a/html/search.html
+++ b/html/search.html
@@ -167,7 +167,11 @@ module.exports = {};
             </div>
         </div>
     </header>
-
+    
+    <div class="object-cover hidden aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
+      <img class="aspect-square object-cover object-center" src="${cover}" >
+    </div>     
+<div class="h-fit"></div>
     <main class="my-8">
         <div class="container mx-auto px-6">
             <div id="searchResults" class="grid gap-2 grid-flow-col">
