--- a/html/popular.html
+++ b/html/popular.html
@@ -139,8 +139,8 @@
 
 <div  class="bg-white dark:bg-background"> 
     <header class="flex mt-6 w-screen items-center text-center justify-center gap-7 border h-16">
-        <p class="rounded-md px-3 font-bold  bg-black text-white uppercase hover:underline dark:text-gray-100">Web Comics</p>
-        <p class="text-base font-bold uppercase hover:underline dark:text-gray-100">Web Novels</p>
+        <p class="rounded-md px-3 font-bold  bg-black text-white uppercase hover:underline cursor-pointer" dark:text-gray-100">Web Comics</p>
+        <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
     </header>
     
     <main class="max-w-5xl mx-auto">
@@ -148,11 +148,11 @@
         <p class="font-bold text-3xl mt-8">Latest Hits:</p>
 
             <div class="grid grid-flow-row w-full mx-auto mt-5">
-                <div class="grid">
+                <div class="grid mx-auto md:mx-0">
                   <div class="grid grid-flow-row w-72">
                       <div class="relative my-4">
-                        <div class="relative"><img class="h-72 object-cover aspect-square" id="cover" src="" alt=""></div>
-                        <p class="absolute top-0 left-0 text-5xl m-4">1</p>
+                        <div class="relative"><img class="h-72 object-cover aspect-square" id="cover" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpicfiles.alphacoders.com%2F383%2F383768.png&f=1&nofb=1" alt=""></div>
+                        <p class="absolute top-0 left-0 text-5xl m-4 text-black ">1</p>
                       </div>
                     <div class="grid grid-flow-row">
                         <div class="text-gray-400 text-sm mt-1">Comedy<span class="mx-1">,</span>Horror</div>
@@ -174,7 +174,7 @@
                                       <td class="px-4 py-3">
                                         <div class="flex items-center text-sm">
                                           <div
-                                            class="relative hidden w-8 h-8 mr-3 rounded-full md:block"
+                                            class="relative  w-8 h-8 mr-3 rounded-full md:block"
                                           >
                                             <img
                                               class="object-cover w-full h-full rounded-sm"
