--- a/html/account.html
+++ b/html/account.html
@@ -540,13 +540,20 @@
                                   background-color: #68D391;
                                 }
                                 </style>
+                                </div>      
                                 <div class="mt-4">
                                   <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in">
                                     <input onclick="enableCreator()" type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                                     <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
                                 </div>
                                 <label for="toggle" class="text-md text-gray-700">Creator?</label>
-                                </div>             
+                                <div class="mt-4">
+                                  <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in">
+                                    <input onclick="" type="checkbox" name="toggle" id="" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
+                                    <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
+                                </div>
+                                <label for="toggle" class="text-md text-gray-700">Dark Mode</label>
+                                </div>                  
                               <div class="mt-8 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">First name</label>
