--- a/html/search.html
+++ b/html/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -131,15 +131,14 @@
     })
   })</script>
 </nav>
-   <!-- tailwind.config.js -->
-module.exports = {};
+
 
 
 
 <!-- component -->
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-<div x-data="{ cartOpen: false , isOpen: false }" class="bg-white dark:bg-background">
+<div x-data="{ cartOpen: false , isOpen: false }" class="bg-white dark:bg-background mt-5">
     <header>
         <div class="container mx-auto px-6 py-3">
             <div class="flex items-center justify-between">
@@ -226,7 +225,7 @@ module.exports = {};
 
                  <main class="my-8">
                   <div class="container mx-auto px-6">
-                      <div class="h-64 rounded-md overflow-hidden bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1577655197620-704858b270ac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1280&q=144')">
+                      <div class="h-64 rounded-md overflow-hidden bg-cover bg-center" style="background-image: url('')">
                           <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
                               <div class="px-10 max-w-xl">
                                   <h2 class="text-2xl text-white font-semibold">Popular</h2>
@@ -239,7 +238,7 @@ module.exports = {};
                           </div>
                       </div>
                       <div class="md:flex mt-8 md:-mx-4">
-                          <div class="w-full h-64 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:w-1/2" style="background-image: url('https://images.unsplash.com/photo-1547949003-9792a18a2601?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80')">
+                          <div class="w-full h-64 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:w-1/2" style="background-image: url('')">
                               <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
                                   <div class="px-10 max-w-xl">
                                       <h2 class="text-2xl text-white font-semibold">Genre 1</h2>
@@ -251,7 +250,7 @@ module.exports = {};
                                   </div>
                               </div>
                           </div>
-                          <div class="w-full h-64 mt-8 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:mt-0 md:w-1/2" style="background-image: url('https://images.unsplash.com/photo-1486401899868-0e435ed85128?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80')">
+                          <div class="w-full h-64 mt-8 md:mx-4 rounded-md overflow-hidden bg-cover bg-center md:mt-0 md:w-1/2" style="background-image: url('')">
                               <div class="bg-gray-900 bg-opacity-50 flex items-center h-full">
                                   <div class="px-10 max-w-xl">
                                       <h2 class="text-2xl text-white font-semibold">Genre 2</h2>
@@ -276,13 +275,6 @@ module.exports = {};
 
             </div>
 
-            <div class="mt-16">
-                <h3 class="text-gray-600 text-2xl font-medium dark:text-gray-100">Recommended</h3>
-                <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 mt-6">
-                </div>
-            </div>
-            <div class="mt-16">
-            </div>
         </div>
     </main>
 
