--- a/html/account.html
+++ b/html/account.html
@@ -549,8 +549,8 @@
                                 <label for="toggle" class="text-md text-gray-700">Creator?</label>
                                 <div class="mt-4">
                                   <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in">
-                                    <input onclick="" type="checkbox" name="toggle" id="" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
-                                    <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
+                                    <input onclick="toggleDark(event)" type="checkbox" name="toggleDarkMode" id="toggleDarkMode" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
+                                    <label for="toggleDarkMode" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
                                 </div>
                                 <label for="toggle" class="text-md text-gray-700">Dark Mode</label>
                                 </div>                  
@@ -828,6 +828,20 @@
         preview.src = src;
         preview.style.display = "block";
       }
+    }
+
+    function toggleDark(e) {
+
+      localStorage.setItem("dark", e.target.checked);
+
+      if(e.target.checked) {
+        document.body.classList.add("dark");
+      } else {
+        document.body.classList.remove("dark");
+      }
+
+      window.location.reload();
+
     }
     
   </script>
