--- a/html/popular.html
+++ b/html/popular.html
@@ -142,7 +142,7 @@
                       </div>
                     <div class="grid grid-flow-row">
                         <div class="text-gray-400 text-sm mt-1"><a id="mostPopularGenre1"></a><span class="mx-1">,</span><a id="mostPopularGenre2"></a></div>
-                        <div class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle"></div>
+                        <a class="font-bold text-2xl mt-2 dark:text-white" id="mostPopularTitle"></a>
                         <div class="font-bold text-xl mt-2 dark:text-white" id="mostPopularCreatorUsername"></div>
                         <div class="text-gray-600 text-left mt-1" id="mostPopularSummary"></div>
 
