--- a/html/search.html
+++ b/html/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -141,7 +141,7 @@
 <!-- component -->
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-<div x-data="{ cartOpen: false , isOpen: false }" class="bg-white dark:bg-background mt-5">
+<div x-data="{ cartOpen: false , isOpen: false }" class="bg-white dark:bg-background ">
     <header>
         <div class="container mx-auto px-6 py-3">
             <div class="flex items-center justify-between">
