--- a/html/advertisement.html
+++ b/html/advertisement.html
@@ -46,7 +46,7 @@
                         <span class=""
                             aria-hidden="true"></span>
                         <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
-                            href="forms.html">
+                            href="/dashboard/series">
                             <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round"
                                 stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
                                 <path
@@ -270,7 +270,7 @@
                         </svg>
                     </button>
                     <!-- Search input -->
-                    <!-- <div class="flex justify-center flex-1 lg:mr-32">
+                    <div class="flex justify-center flex-1 lg:mr-32">
                         <div class="relative w-full max-w-xl mr-6 focus-within:text-cyan-500">
                             <div class="absolute inset-y-0 flex items-center pl-2">
                                 <svg class="w-4 h-4" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20">
@@ -279,11 +279,13 @@
                                         clip-rule="evenodd"></path>
                                 </svg>
                             </div>
-                            <input id="searchBar"
+                            <a href="/dashboard/series">
+                            <input id=""
                                 class="w-full pl-8 pr-2 text-sm text-gray-700 placeholder-gray-600 bg-gray-100 border-0 rounded-md dark:placeholder-gray-500 dark:focus:shadow-outline-gray dark:focus:placeholder-gray-600 dark:bg-gray-700 dark:text-gray-200 focus:placeholder-gray-500 focus:bg-white focus:border-cyan-300 focus:outline-none focus:shadow-outline-cyan form-input"
                                 type="text" placeholder="Search for series" aria-label="Search" />
                         </div>
-                    </div> -->
+                    </a>
+                    </div>
                     <ul class="flex items-center flex-shrink-0 space-x-6">
                         <!-- Theme toggler -->
                         <li class="flex">
@@ -555,7 +557,7 @@
                                         </div>
                                     </template>
                                     <div class="flex-1">
-                                        <input id="searchBar" type="search" placeholder="Search"
+                                        <input id="searchBar" type="search" placeholder="search..."
                                             class="w-full border-0 focus:border-0 focus:outline-none focus:ring-0 py-2 px-0">
                                         <div id="seriesHolder" class="space-y-1">
                                             <!-- <div class="flex items-center bg-gray-200 border-2  cursor-pointer rounded-md p-2 hover:border-light-blue-1">
